// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`From within the 'empty-project' fixture returns the correct router: /web/src/Routes.tsx errors 1`] = `[]`;

exports[`From within the 'empty-project' fixture returns the correct router: /web/src/Routes.tsx warnings 1`] = `[]`;

exports[`From within the 'empty-project' fixture returns the correct router: router content 1`] = `
RedwoodRouter {
  "filepath": "/web/src/Routes.tsx",
  "name": "Routes",
  "routes": [
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": true,
      "isPrivate": false,
      "name": "notfound",
      "pageIdentifier": "NotFoundPage",
      "path": undefined,
      "prerender": false,
      "type": "route",
    },
  ],
  "type": "router",
}
`;

exports[`From within the 'example-todo-main' fixture returns the correct router: /web/src/Routes.js errors 1`] = `[]`;

exports[`From within the 'example-todo-main' fixture returns the correct router: /web/src/Routes.js warnings 1`] = `[]`;

exports[`From within the 'example-todo-main' fixture returns the correct router: router content 1`] = `
RedwoodRouter {
  "filepath": "/web/src/Routes.js",
  "name": "Routes",
  "routes": [
    RedwoodRoute {
      "filepath": "/web/src/Routes.js",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "home",
      "pageIdentifier": "HomePage",
      "path": "/",
      "prerender": true,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.js",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "typescriptPage",
      "pageIdentifier": "TypeScriptPage",
      "path": "/typescript",
      "prerender": true,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.js",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "someOtherPage",
      "pageIdentifier": "EditUserPage",
      "path": "/somewhereElse",
      "prerender": true,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.js",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "fooPage",
      "pageIdentifier": "FooPage",
      "path": "/foo",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.js",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "barPage",
      "pageIdentifier": "BarPage",
      "path": "/bar",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.js",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": true,
      "name": "privatePage",
      "pageIdentifier": "PrivatePage",
      "path": "/private-page",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.js",
      "hasParameters": false,
      "isNotFound": true,
      "isPrivate": false,
      "name": "notfound",
      "pageIdentifier": "NotFoundPage",
      "path": undefined,
      "prerender": false,
      "type": "route",
    },
  ],
  "type": "router",
}
`;

exports[`From within the 'example-todo-main-with-errors' fixture returns the correct router: /web/src/Routes.js errors 1`] = `
[
  {
    "component": {
      "filepath": "/web/src/Routes.js",
      "name": "Routes",
      "type": "router",
    },
    "message": "No "notfound" route detected",
  },
  {
    "component": {
      "filepath": "/web/src/Routes.js",
      "name": "Routes",
      "type": "router",
    },
    "message": "Multiple routes named "home" are present",
  },
]
`;

exports[`From within the 'example-todo-main-with-errors' fixture returns the correct router: /web/src/Routes.js warnings 1`] = `[]`;

exports[`From within the 'example-todo-main-with-errors' fixture returns the correct router: router content 1`] = `
RedwoodRouter {
  "filepath": "/web/src/Routes.js",
  "name": "Routes",
  "routes": [
    RedwoodRoute {
      "filepath": "/web/src/Routes.js",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "home",
      "pageIdentifier": "HomePage",
      "path": "/",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.js",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "home",
      "pageIdentifier": "HomePage",
      "path": "/",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.js",
      "hasParameters": true,
      "isNotFound": false,
      "isPrivate": false,
      "name": "something-else",
      "pageIdentifier": "DoesNotExist",
      "path": "/{foo}/{foo}",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.js",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "Routes",
      "pageIdentifier": "NotFoundPage",
      "path": undefined,
      "prerender": false,
      "type": "route",
    },
  ],
  "type": "router",
}
`;

exports[`From within the 'test-project' fixture returns the correct router: /web/src/Routes.tsx errors 1`] = `[]`;

exports[`From within the 'test-project' fixture returns the correct router: /web/src/Routes.tsx warnings 1`] = `[]`;

exports[`From within the 'test-project' fixture returns the correct router: router content 1`] = `
RedwoodRouter {
  "filepath": "/web/src/Routes.tsx",
  "name": "Routes",
  "routes": [
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "double",
      "pageIdentifier": "DoublePage",
      "path": "/double",
      "prerender": true,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "login",
      "pageIdentifier": "LoginPage",
      "path": "/login",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "signup",
      "pageIdentifier": "SignupPage",
      "path": "/signup",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "forgotPassword",
      "pageIdentifier": "ForgotPasswordPage",
      "path": "/forgot-password",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "resetPassword",
      "pageIdentifier": "ResetPasswordPage",
      "path": "/reset-password",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "newContact",
      "pageIdentifier": "ContactNewContactPage",
      "path": "/contacts/new",
      "prerender": true,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": true,
      "isNotFound": false,
      "isPrivate": false,
      "name": "editContact",
      "pageIdentifier": "ContactEditContactPage",
      "path": "/contacts/{id:Int}/edit",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": true,
      "isNotFound": false,
      "isPrivate": false,
      "name": "contact",
      "pageIdentifier": "ContactContactPage",
      "path": "/contacts/{id:Int}",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "contacts",
      "pageIdentifier": "ContactContactsPage",
      "path": "/contacts",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "newPost",
      "pageIdentifier": "PostNewPostPage",
      "path": "/posts/new",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": true,
      "isNotFound": false,
      "isPrivate": false,
      "name": "editPost",
      "pageIdentifier": "PostEditPostPage",
      "path": "/posts/{id:Int}/edit",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": true,
      "isNotFound": false,
      "isPrivate": false,
      "name": "post",
      "pageIdentifier": "PostPostPage",
      "path": "/posts/{id:Int}",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "posts",
      "pageIdentifier": "PostPostsPage",
      "path": "/posts",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": true,
      "isNotFound": false,
      "isPrivate": false,
      "name": "waterfall",
      "pageIdentifier": "WaterfallPage",
      "path": "/waterfall/{id:Int}",
      "prerender": true,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": true,
      "name": "profile",
      "pageIdentifier": "ProfilePage",
      "path": "/profile",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": true,
      "isNotFound": false,
      "isPrivate": false,
      "name": "blogPost",
      "pageIdentifier": "BlogPostPage",
      "path": "/blog-post/{id:Int}",
      "prerender": true,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "contactUs",
      "pageIdentifier": "ContactUsPage",
      "path": "/contact",
      "prerender": false,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "about",
      "pageIdentifier": "AboutPage",
      "path": "/about",
      "prerender": true,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": false,
      "isPrivate": false,
      "name": "home",
      "pageIdentifier": "HomePage",
      "path": "/",
      "prerender": true,
      "type": "route",
    },
    RedwoodRoute {
      "filepath": "/web/src/Routes.tsx",
      "hasParameters": false,
      "isNotFound": true,
      "isPrivate": false,
      "name": "notfound",
      "pageIdentifier": "NotFoundPage",
      "path": undefined,
      "prerender": true,
      "type": "route",
    },
  ],
  "type": "router",
}
`;
